# news-fetcher

./: .gitignore  Cargo.toml  README.md  config.toml.example  sources.toml
docs/: CNAME  days.js  index.html
docs/feeds/2026/05/: 13.html  14.html  15.html  18.html  19.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html
docs/superpowers/specs/: 2026-05-27-editorial-ranking-design.md
specs/: 2026-05-24-multipage-site-design.md
src/: codex.rs  config.rs  digest.html.j2  fetch.rs  filter.rs  main.rs  message.rs  model.rs  rank.rs  render.rs  store.rs  summarize.rs
