[package]
name = "news-fetcher"
version = "0.1.0"
edition = "2021"
description = "Monitors industry news about coding agents (Codex & Claude Code) and generates an HTML digest."

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
feed-rs = "2"
minijinja = "2"
pulldown-cmark = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
ureq = { version = "2", features = ["json", "tls"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
